--- a/hog/readme
+++ b/hog/readme
@@ -1,1 +1,1 @@
-This is the first project http://inst.eecs.berkeley.edu/~cs61a/fa13/proj/hog/hog.html from sicp in python 3
+This is the first project (http://inst.eecs.berkeley.edu/~cs61a/fa13/proj/hog/hog.html) from sicp in python 3
