--- a/ants/readme
+++ b/ants/readme
@@ -1,1 +1,11 @@
 This is the project (http://inst.eecs.berkeley.edu/~cs61a/fa13/proj/ants/ants.html) from sicp in python 3
+
+A tower defense game called Ants Vs. Bees inspired by PapCap Game' Plants Vs. Zomebies (https://www.ea.com/studios/popcap)
+
+To start a text-based game, run python3 ants.py
+To start a graphical game, run python3 ants_gui.py
+To test the project, run python3 ants_grader.py -v (individual test, run  python3 ants_grader.py -q 2)
+
+Run game with ten food at begining with one tunnel : run python3 ants_gui.py -t
+Run multi-tunnel game: run python3 ants_gui.py -full
+REAL CHALLENGE: run python3 ants_gui.py -full --insane
